--- a/socialPlugin.html
+++ b/socialPlugin.html
@@ -17,9 +17,10 @@
 
 	  <!--comment-->
 	  <!--https://developers.facebook.com/docs/plugins/comments-->
-      
+      <div class="fb-comments" data-href="http://gtshp1231.github.io/facebook-startkit/socialPlugin.html" data-numposts="5"></div>
 	  <!--page-->
 	  <!--https://developers.facebook.com/docs/plugins/page-plugin-->
+	  <div class="fb-page" data-href="https://www.facebook.com/AlternativeRockRecords" data-hide-cover="false" data-show-facepile="true" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/AlternativeRockRecords"><a href="https://www.facebook.com/AlternativeRockRecords">另類唱片行</a></blockquote></div></div>
 
     <script src="js/key.js"></script>		   
 	</body>
