--- a/graphApi.html
+++ b/graphApi.html
@@ -50,18 +50,30 @@
 		function fblogin(){
 		//step2:https://developers.facebook.com/docs/graph-api/using-graph-api/v2.3	
 		Parse.FacebookUtils.logIn(null, {
-			  success: function(user) {
-			    if (!user.existed()) {
-			      alert("User signed up and logged in through Facebook!");
-			    } else {
-			      alert("User logged in through Facebook!");
+		  success: function(user) {
+		    if (!user.existed()) {
+		      alert("User signed up and logged in through Facebook!");
+		    } else {
+		      alert("User logged in through Facebook!");
+		}
+		//等等要在這邊加程式碼 FB.getLoginStatus
+		indexView(); //這是預先寫好的控制版⾯面的function,⾮非臉書api FB.getLoginStatus(function(response) {
+			if (response.status === 'connected') { //等等要在這邊加程式碼 使⽤用FB.api()
 			}
-			//等等要在這邊加程式碼 FB.getLoginStatus
-			  },
-			  error: function(user, error) {
-			    alert("User cancelled the Facebook login or did not fully authorize.");
-			  }
 			});
+		//擷取⼤大頭照 FB.api('/me/picture?type=large',function(response) {
+	       $('#fbImgView').html("<h5>Here are your profile photo</h5><img
+		    src="+response.data.url+"crossorigin=\"anonymous\" id=preview1 / >");
+		});
+		//個⼈人資訊 FB.api('/me',function(response) {
+		       $('#fbImgView').append("<h1>Welcome ,+(response['gender']=="male"?"Mr. ":"Miss ")
+		    +" "+response['first_name']+"</h1>");
+		});
+		  },
+		  error: function(user, error) {
+		    alert("User cancelled the Facebook login or did not fully authorize.");
+		  }
+		});
 		}
 		
 	</script>
